🎨 Use Java’s Predicate in post visibility filter